syntax = "proto3";

package lab.common;

// Money message for representing currency values
message Money {
  string currency_code = 1;
  string amount = 2;
}

// Period type enum for time periods
enum PeriodType {
  PERIOD_TYPE_UNSPECIFIED = 0;
  WEEK = 1;
  MONTH = 2;
  DAY = 3;
}

// Limit type enum
enum LimitType {
  LIMIT_TYPE_UNSPECIFIED = 0;
  LOSS = 1;
  DEPOSIT = 2;
}
